# ts_exploration

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: biomass_ts_observations.txt  car_sales_ts_observations.txt  coffee_ts_observations.txt
data/kmds/: biomass_power_analysis.xml  car_sales_analysis.xml  coffee_prices_analysis.xml  coffee_prices_analysis_report.txt
notebooks/: car_sales_analysis.ipynb  coffee_prices_report_generation.ipynb  energy_biomass_generation.ipynb  global_analysis_coffee.ipynb  observation_log.py  ts_id_analysis.ipynb
