[project]
name = "ts-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.66.0",
    "importlib-resources>=6.5.2",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "kdepy>=1.1.12",
    "kmds>=0.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "ruptures>=1.1.10",
    "scikit-learn>=1.8.0",
    "scipy<1.16.0",
    "seaborn>=0.13.2",
    "skrub>=0.7.2",
    "ssalib>=0.1.3",
    "statsmodels>=0.14.6",
]
